<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khalyd.cecyteapp.Activities.AboutCecyteInfo">

    <ImageView
        android:id="@+id/anim_Info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:background="@color/black"
        android:fitsSystemWindows="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <ImageView
        android:id="@+id/to_Main_Activity"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@drawable/ic_next_activity"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="2dp"
        />
    <ScrollView
        android:id="@+id/scrollForUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/to_Main_Activity"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/color_scrollbars"
        android:scrollbarSize="6dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/significadoC"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/colorTitleInfo"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/aboutC"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/sloganColor"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="Misión"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/colorTitleInfo"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/misionCecyte"
                android:textSize="20sp"
                android:textColor="@color/sloganColor"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="Visión"
                android:textSize="30sp"
                android:textColor="@color/colorTitleInfo"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/visionCecyte"
                android:textSize="20sp"
                android:textColor="@color/sloganColor"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/AvaibleCarrer"
                android:textSize="30sp"
                android:textColor="@color/colorTitleInfo"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/carerrasC"
                android:textSize="20sp"
                android:textColor="@color/sloganColor"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="Más...."
                android:textSize="30sp"
                android:textColor="@color/colorTitleInfo"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/invite"
                android:textSize="20sp"
                android:textColor="@color/sloganColor"
                />

            <Button
                android:id="@+id/to_locate"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/to_locate"
                android:layout_gravity="center"
                android:background="@drawable/back_relleno"
                android:textColor="#ffff"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="130dp"
                />
        <!--Para poner una distancia de la pantalla se usa el margin botoom-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
