<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relative_main_student"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.khalyd.cecyteapp.ActivitiesDeprecated.LoginStudent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <!--La primera es el fondo donde iria -->

    <ImageView
        android:id="@+id/loadingViewStudent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        />

    <ImageView
        android:id="@+id/colorTransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
     <!--Comentario Largo en Xml .
      En esa image view va el fondo que cambiara con el tiempo-->


    <ImageView
        android:id="@+id/backToSIGN"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@drawable/ic_action_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        />

    <LinearLayout
    android:id="@+id/linearMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/ic_student"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_student2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:layout_gravity="center"
        />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Estudiante"
         android:textColor="@color/sloganColor"
         android:layout_gravity="center"
         />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_student_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:textColorHint="#9E9E9E"
        >

    <EditText
        android:id="@+id/get_email_student_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFF"
        android:ems="35"
        android:text="@string/noTest"
        android:hint="@string/user"
        android:backgroundTint="#BDBDBD"
        android:textColorHint="#9E9E9E"
        android:cursorVisible="true"
        android:inputType="textEmailAddress"
        android:shadowColor="#212121"
        android:drawableStart="@mipmap/ic_card"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_above="@+id/password"
        android:textCursorDrawable="@drawable/mycursor"
       />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_Student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:textColorHint="#9E9E9E"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/sloganColor"
        >

    <EditText
        android:id="@+id/get_password_Student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFF"
        android:ems="35"
        android:text=""
        android:hint="@string/password"
        android:backgroundTint="#BDBDBD"
        android:textColorHint="#9E9E9E"
        android:cursorVisible="true"
        android:inputType="textPassword"
        android:shadowColor="#212121"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/text_passwordoo"
        android:textCursorDrawable="@drawable/mycursor"
        />
    </android.support.design.widget.TextInputLayout>


        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/loginStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:gravity="center"
            android:background="@drawable/back_relleno"
            android:textColor="#ffff"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:paddingLeft="105dp"
            android:paddingRight="105dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            app:initialCornerAngle="100dp"
            app:finalCornerAngle="100dp"
            app:spinning_bar_width="2dp"
            app:spinning_bar_color="@color/yellow"
            />

   </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/linearMain"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_next_activity"

            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_next_activity"

            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_next_activity"

            />


    </LinearLayout>


             <!--El android padding sirve para el left y righ -->

    <!--Debo de usar el background que ya trae el boton anterior-->

</RelativeLayout>

