<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relative_main_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.khalyd.cecyteapp.ActivitiesDeprecated.LoginParent"

    >
    <!--Checar esto-->
    <ImageView
        android:id="@+id/loadingViewParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#80000000" />
    <!--Comentario Largo en Xml .
     En esa image view va el fondo que cambiara con el tiempo-->


    <ImageView
        android:id="@+id/backToSIGN"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_action_back"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:src="@mipmap/ic_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sloganColor"
            android:text="Tutor"
            android:layout_gravity="center"
            />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="35dp"
            android:textColorHint="#9E9E9E">

            <EditText
                android:id="@+id/get_email_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/numberOfStudent"
                android:backgroundTint="#BDBDBD"
                android:drawableStart="@drawable/text_pras_no"
                android:ems="35"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFF"
                android:textColorHint="#9E9E9E"
                android:textCursorDrawable="@drawable/mycursor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_parent_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="35dp"
            android:textColorHint="#9E9E9E"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/sloganColor">

            <EditText
                android:id="@+id/get_password_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="22dp"
                android:backgroundTint="#BDBDBD"
                android:drawableStart="@drawable/text_passwordoo"
                android:ems="35"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#FFFF"
                android:textColorHint="#9E9E9E"
                android:textCursorDrawable="@drawable/mycursor"

                />
        </android.support.design.widget.TextInputLayout>



        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/button_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/back_relleno"
            android:paddingLeft="105dp"
            android:paddingRight="105dp"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="20sp"
            app:initialCornerAngle="100dp"
            app:finalCornerAngle="100dp"
            app:spinning_bar_width="2dp"
            app:spinning_bar_color="@color/yellow"
            />



    </LinearLayout>

    <!--El android padding sirve para el left y righ -->


</RelativeLayout>

